infra/cluster/manifests/headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: kube-system
  annotations:
    #kubernetes.io/tls-acme: "true"
    #cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: traefik
spec:
  #tls:
  #  - secretName: headlamp
  #    hosts:
  #      - headlamp.ohkillsh.win
  rules:
    - host: headlamp.ohkillsh.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
